# Tatlin.UnifiedDataPath

./: CMakeLists.txt  README.md  config.txt
include/: Config.h  FileTape.h  ITape.h  TapeSorter.h
src/: Config.cpp  FileTape.cpp  TapeSorter.cpp  main.cpp
tests/: test_tape.cpp
